--- a/frontEnd/Bio page/Bio.html
+++ b/frontEnd/Bio page/Bio.html
@@ -10,11 +10,11 @@
     <body>
         <div class = "container">
             <div class = "row">
-                <div class = "col-5 text-center">
+                <div class = "col-12 col-lg-5 text-center">
                     <h1>Silver</h1>
                     <img src="image.png" class="img-fluid"/>
                 </div>
-                <div class="col-7">
+                <div class="col-12 col-lg-7">
                     <h1>Favorite Music Artists</h1>
                     <ul>
                         <li>Metallica</li>
@@ -31,6 +31,7 @@
                         <li>Iron Man</li>
                         <li>Inception</li>
                     </ol>
+                    <button type="button" class="btn btn-primary">My Meta Profile</button>
                 </div>
             </div>
         </div>
